ext/ply/test/lex_ignore.exp
./lex_ignore.py:17: Rule 't_ignore' must be defined as a string.
SyntaxError: lex: Unable to build lexer.
